--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.1.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pmx": "^1.6.4",
     "pty.js": "^0.3.1",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1",
